src/az-cli/aks-app-routing-internal/6.az-vote-front-ing-tls-int.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front-svc-ing-int
  namespace: azure-vote
  # annotations:
  #   kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-use2-446692-s4-aksfdp.vault.azure.net/certificates/aksfdpls-ebtests-ingress-tls/d33d696c8c9f4c9bb318b550c449323e
spec:
  ingressClassName: ing-internal
  rules:
  - host: azvote-int.akspls.ebtests
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front-svc-clusip
            port:
              number: 80
  # tls:
  # - hosts:
  #   - azvote-int.akspls.ebtests
  #   secretName: keyvault-azure-vote-front-svc-ing-tls-int
